 Command line options:         152
 curl_easy_setopt() options:   199
 Public functions in libcurl:  58
 Known libcurl bindings:       42
 Contributors:                 1005

***
  krb4 support is up for removal. If you care about it at all, speak up
  on the curl-library list asap!
***

This release includes the following changes:

 o darwinssl: add TLS session resumption
 o imap/pop3/smtp: Added support for ;auth=<mech> in the URL
 o imap/pop3/smtp: Added support for ;auth=<mech> to CURLOPT_USERPWD
 o usercertinmem.c: add example showing user cert in memory
 o url: Added smtp and pop3 hostnames to the protocol detection list
 o imap/pop3/smtp: Added support for enabling the SASL initial response [8]
 o 

This release includes the following bugfixes:

 o FTP: access files in root dir correctly [1]
 o configure: try pthread_create without -lpthread [2]
 o FTP: handle a 230 welcome response [3]
 o curl-config: don't output static libs when they are disabled
 o CURL_CHECK_CA_BUNDLE: don't check for paths when cross-compiling [4]
 o Various documentation updates
 o getinfo.c: reset timecond when clearing session-info variables [5]
 o FILE: prevent an artificial timeout event due to stale speed-check data [6]
 o ftp_state_pasv_resp: connect through proxy also when set by env [7]
 o sshserver: disable StrictHostKeyChecking
 o ftpserver: Fixed imap logout confirmation data
 o curl_easy_init: use less mallocs
 o 

This release includes the following known bugs:

 o see docs/KNOWN_BUGS (http://curl.haxx.se/docs/knownbugs.html)

This release would not have looked like this without help, code, reports and
advice from friends like these:

 David Strauss, Kamil Dudka, Steve Holme, Nick Zitzmann, Sam Deane, Duncan,
 Anders Havn, Dan Fandrich, Paul Howarth, Dave Reisner, Wouter Van Rooy,
 Linus Nielsen Feltzing, Ishan SinghLevett, Alessandro Ghedini,
 Ludovico Cavedon, Zdenek Pavlas, Zekun Ni

        Thanks! (and sorry if I forgot to mention someone)
